Update License restrictions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -99,7 +99,7 @@ jobs:
             Individuals or companies in Chinese Mainland (except Hong Kong China, Macau China, and Taiwan Province of China) are prohibited from using this MIT license and using this repository and products if the following circumstances apply:
 
             中国大陆地区（中国香港、中国澳门和中国台湾除外）的个人或公司如含有以下任一情况禁止使用该 MIT 许可并禁止使用此储存库以及商品（包括此储存库以及商品的任一文件）：
-            1. 以公司、社团、社区、公司下的团队或工作室名义创建的地图/世界
+            1. 不以个人名义创建的地图/世界
             2. 地图/世界参与制作人数超过 2 人以上（不含 2 人）
             3. 由 Sonic853 明确禁止的个人用户、公司
 
