--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -93,13 +93,13 @@ jobs:
 
             ## License restrictions 许可限制
 
-            Individuals or companies in Chinese Mainland (except Hong Kong China, Macau China, and Taiwan Province of China) are prohibited from using this LGPL license and using this repository and products if the following circumstances apply:
+            Individuals or companies in Chinese Mainland (except Hong Kong China, Macau China, and Taiwan Province of China) are prohibited from using this MIT license and using this repository and products if the following circumstances apply:
             
             1. The map/world is not created in an individual capacity
             2. The map/world involves more than two participants in its creation (not including two participants)
             3. Any individual user or company explicitly prohibited by Sonic853
 
-            中国大陆地区（中国香港、中国澳门和中国台湾除外）的个人或公司如含有以下任一情况禁止使用该 LGPL 许可并禁止使用此储存库以及商品（包括此储存库以及商品的任一文件）：
+            中国大陆地区（中国香港、中国澳门和中国台湾除外）的个人或公司如含有以下任一情况禁止使用该 MIT 许可并禁止使用此储存库以及商品（包括此储存库以及商品的任一文件）：
 
             1. 不以个人名义创建的地图/世界
             2. 地图/世界参与制作人数超过 2 人以上（不含 2 人）
